update link travel function

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Josefin+Sans" rel="stylesheet" type="text/css">
 	<link href="cecilia.css" rel="stylesheet" type="text/css" />
+	 <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/hypodermic/kuychiwebsite/master/favicon.ico">
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
@@ -106,7 +107,7 @@
             </a>
         </div>
         <div class="col-4">
-          <a href="https://codepen.io/hypodermic/full/qorpdQ/" target="blank">
+          <a href="https://hypodermic.github.io/Where-to-Travel/" target="blank">
             <div class="titlehover">
               <img class="image2"src="https://farm5.staticflickr.com/4773/40890791052_dc0ae53b72_z.jpg" alt="coding project2">
               <div class="title">
