--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Cecilia!</title>
+	<title>Cecilia</title>
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Josefin+Sans" rel="stylesheet" type="text/css">
 	<link href="cecilia.css" rel="stylesheet" type="text/css" />
