update kuychi web pic

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
             </a>
         </div>
         <div class="col-4">
-          <a href="https://codepen.io/hypodermic/full/ZrOLVa/" target="blank">
+          <a href="https://codepen.io/hypodermic/full/ZrOLVa/" https://hypodermic.github.io/kuychiwebsite/ target="blank">
             <div class="titlehover">
               <img class="image2"src="https://farm1.staticflickr.com/819/40039045105_8aac06ba8f_z.jpg" alt="coding project3">
               <div class="title">
@@ -133,12 +133,12 @@
       </div>
       <div class="row">
         <div class="col-4">
-          <a href="" target="blank">
+          <a href="https://hypodermic.github.io/kuychiwebsite/" target="blank">
             <div class="titlehover">
-              <img class="image2"src="https://farm5.staticflickr.com/4701/38844975030_6feb832756_z.jpg" alt="coding project1">
-              <div id="comingsoon"class="title">
+              <img class="image2"src="kuychiwebpic.jpg" alt="coding project4">
+              <div class="title">
                 <div class="inner">
-                  <h1>Coming Soon!<h1>
+                  <h1>K'uychi Project Website<h1>
                 </div>
               </div>
             </div>
