add uniqas website & pic

--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@
             </a>
         </div>
         <div class="col-4">
-          <a href="" target="blank">
+          <a href="https://somosuniqas.herokuapp.com/index.php" target="blank">
             <div class="titlehover">
-              <img class="image2"src="https://farm5.staticflickr.com/4701/38844975030_6feb832756_z.jpg" alt="coding project1">
-              <div id="comingsoon"class="title">
+              <img class="image2"src="uniqaswebpic.jpg" alt="coding project4">
+              <div class="title">
                 <div class="inner">
-                  <h1>Coming Soon!<h1>
+                  <h1>Uniqas Online Shop<h1>
                 </div>
               </div>
             </div>
