add js kuychi game web & pic

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         <div class="col-4">
           <a href="https://somosuniqas.herokuapp.com/index.php" target="blank">
             <div class="titlehover">
-              <img class="image2"src="uniqaswebpic.jpg" alt="coding project4">
+              <img class="image2"src="uniqaswebpic.jpg" alt="coding project5">
               <div class="title">
                 <div class="inner">
                   <h1>Uniqas Online Shop<h1>
@@ -157,6 +157,18 @@
             </a>
         </div>
         <div class="col-4">
+          <a href="https://hypodermic.github.io/JS-Kuychi-Game/" target="blank">
+            <div class="titlehover">
+              <img class="image2"src="jskuychigame.jpg" alt="coding project6">
+              <div class="title">
+                <div class="inner">
+                  <h1>JS K'uychi Game<h1>
+                </div>
+              </div>
+            </div>
+            </a>
+        </div>
+		<!--<div class="col-4">
           <a href="" target="blank">
             <div class="titlehover">
               <img class="image2"src="https://farm5.staticflickr.com/4701/38844975030_6feb832756_z.jpg" alt="coding project1">
@@ -167,7 +179,8 @@
               </div>
             </div>
             </a>
-        </div>
+        </div>-->
+		
       </div>
     </div>
   </div>
