--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<script defer src="https://use.fontawesome.com/releases/v5.0.7/js/all.js"></script>
 	<link href="https://fonts.googleapis.com/css?family=Permanent+Marker|Josefin+Sans" rel="stylesheet" type="text/css">
 	<link href="cecilia.css" rel="stylesheet" type="text/css" />
-	 <link rel="shortcut icon" type="image/x-icon" href="https://raw.githubusercontent.com/hypodermic/kuychiwebsite/master/favicon.ico">
+	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
